Notification Edit widget is looking good.  Need to fix POsition Watch details content spacing

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -82,10 +82,10 @@
 //Large screens - DESKTOP
 //min-width 1025px, large screens
 @media only screen and (min-width: $largeScreen) {
-    .button {
+    button {
         margin: $xsmall;
     }
-    .text_input {
+    input {
         margin: $xsmall;
     }
 }
